2015-04-29 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/gcc-torture-execute-20001011-1.c:
	  Enabled.
	* support/cpp/libcpp/macro.c:
	* support/cpp/libcpp/include/cpplib.h:
	* support/cpp/libcpp/init.c:
	* src/SDCC.y:
	  Support macro __func__.

2015-04-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Better peephole interaction for early ret statements in functions.

2015-04-22 Ben Shi <powerstudio1st AT 163 DOT com>
	* Makefile.common.in:
	* configure:
	* configure.in:
	* support/regression/Makefile.in:
	* support/regression/ports/ds390/spec.mk:
	* support/regression/ports/hc08/spec.mk:
	* support/regression/ports/mcs51-common/spec.mk:
	* support/regression/ports/pic14/spec.mk:
	* support/regression/ports/pic16/spec.mk:
	* support/regression/ports/s08/spec.mk:
	* support/regression/ports/stm8/spec.mk:
	* support/regression/ports/ucgbz80/spec.mk:
	* support/regression/ports/ucr2k/spec.mk:
	* support/regression/ports/ucr3ka/spec.mk:
	* support/regression/ports/ucz180/spec.mk:
	* support/regression/ports/ucz80/spec.mk:
	* support/valdiag/Makefile.in:
	  Auto detect python in $PATH.
	* support/regression/tests/z88dk.c:
	  Fix build error in reversion #9218.

2015-04-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  support/regression/tests/bug-2376.c:
	  Fix peephole optimizer bug #2376.

2015-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/port.h,
	  src/z80/main.c,
	  src/z80/gen.c,
	  src/z80/peep.h,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def:
	  Fix peephole optimizer bug #2374, more efficient calls to _Noreturn functions.

2015-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c,
	  support/regression/tests/z88dk.c:
	  Fix peephole optimizer bug #2371.

2015-04-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglobl.h:
	  Silence warning.
	* src/z80/gen.c,
	  device/lib/*/__sdcc_call_hl.s,
	  device/lib/*/__sdcc_call_iy.s,
	  src/SDCCsymt.c: